--- a/index.html
+++ b/index.html
@@ -157,7 +157,7 @@ section .title::after {
 
 .navbar .logo a {
   color: #fff;
-  font-size: 35px;
+  font-size: 23px;
   font-weight: 600;
 }
 
@@ -458,9 +458,17 @@ footer span a:hover {
     bottom: -8px;
     font-size: 16px;
   }
+  .menu-btn {
+  font-size: 43px;
 }
 
-@media (max-width: 991px) {
+.navbar .logo a {
+  font-size: 43px;
+}
+
+}
+
+@media (max-width: 1104px) {
   .social-menu ul li a {
     left: 114px;
   }
@@ -735,7 +743,7 @@ footer span a:hover {
 
     <!-- contact -->
   <section class="contact" id="contact" style="background-color: #111; color: #fff;">
-    <div style="background-color: #222; box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2); max-width: 350px; margin: auto; text-align: center; font-family: 'poppins',sans-serif; border-radius: 12px;">
+    <div style="background-color: #222; box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2); max-width: 370px; margin: auto; text-align: center; font-family: 'poppins',sans-serif; border-radius: 12px;">
           <img src="mn.jpeg" style="width:70%; height: 70%; border-radius: 12px; margin-top: 30px;">
           <h1>Manuka Sasen</h1>
           <p>Front-End Junior Web<br>Developer 👋</p>
