--- a/index.html
+++ b/index.html
@@ -3,19 +3,7 @@
 <html lang="en" >
 
 <head>
-  <meta charset="UTF-8">
-  
-
-    <link rel="apple-touch-icon" type="image/png" href="https://cpwebassets.codepen.io/assets/favicon/apple-touch-icon-5ae1a0698dcc2402e9712f7d01ed509a57814f994c660df9f7a952f3060705ee.png" />
-
-    <meta name="apple-mobile-web-app-title">
-
-    <link rel="mask-icon" type="image/x-icon" href="https://cpwebassets.codepen.io/assets/favicon/logo-pin-b4b4269c16397ad2f0f7a01bcdf513a1994f4c94b8af2f191c09eb0d601762b1.svg" color="#111" />
-
-
-  
-  
-  <link rel='stylesheet' href='https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.3/css/all.min.css'>
+<link rel='stylesheet' href='https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.3/css/all.min.css'>
 <link rel='stylesheet' href='https://cdn.jsdelivr.net/npm/bootstrap-icons@1.8.2/font/bootstrap-icons.css'>
 <link rel='stylesheet' href='https://fonts.googleapis.com/css2?family=Comfortaa:wght@300;400;500;600;700&amp;family=Poppins:wght@100;300;400;500;600;700;800;900&amp;family=Ubuntu:wght@300;400;500;700&amp;display=swap"rel="stylesheet'>
 <link rel='stylesheet' href='https://cdnjs.cloudflare.com/ajax/libs/OwlCarousel2/2.3.4/assets/owl.carousel.min.css'>
@@ -466,6 +454,11 @@ footer span a:hover {
   font-size: 43px;
 }
 
+.about-content{
+font-size: 14px;
+font-weight: 400;
+}
+
 }
 
 @media (max-width: 1104px) {
@@ -544,7 +537,7 @@ footer span a:hover {
     padding: 0 23px;
   }
   .home .home-content .text-2 {
-    font-size: 60px;
+    font-size: 70px;
   }
   .home .home-content .text-3 {
     font-size: 32px;
@@ -559,10 +552,10 @@ footer span a:hover {
 
 @media (max-width: 1014px) {
   .home .home-content .text-2 {
-    font-size: 50px;
+    font-size: 60px;
   }
   .home .home-content .text-3 {
-    font-size: 27px;
+    font-size: 37px;
   }
   .about .about-content .right .text,
   .skills .skills-content .left .text {
@@ -581,9 +574,9 @@ footer span a:hover {
   .scroll-up-btn {
     right: 15px;
     bottom: 15px;
-    height: 38px;
-    width: 35px;
-    font-size: 23px;
+    height: 48px;
+    width: 55px;
+    font-size: 43px;
     line-height: 38px;
   }
 }
