--- a/index.html
+++ b/index.html
@@ -662,8 +662,11 @@ font-weight: 400;
     @media (max-width: 1472px) {
 
       .ffbx{
-        display: grid;
-        place-items: center;
+        /*display: grid;
+        place-items: center;*/
+        display: flex;
+        flex-wrap: wrap;
+        justify-content: center;
       }
   
     }
