--- a/index.html
+++ b/index.html
@@ -849,8 +849,8 @@ font-weight: 400;
 
     <!-- contact -->
   <section class="contact" id="contact" style="background-color: #111; color: #fff;">
-    <div style="background-color: #222; box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2); max-width: 370px; margin: auto; text-align: center; font-family: 'poppins',sans-serif; border-radius: 12px;">
-          <img src="mn.jpeg" style="width:70%; height: 70%; border-radius: 12px; margin-top: 30px;">
+    <div style="background-color: #222; box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2); max-width: 340px; margin: auto; text-align: center; font-family: 'poppins',sans-serif; border-radius: 12px;">
+          <img src="mn.jpg" style="width:80%; height: 75%; border-radius: 12px; margin-top: 30px;">
           <h1>Manuka Sasen</h1>
           <p>Front-End Junior Web<br>Developer 👋</p>
           <div style="padding-bottom: 10px; font-size: 22px; color: #fff;">
