--- a/index.html
+++ b/index.html
@@ -898,12 +898,12 @@ font-weight: 400;
           <img src="mn.jpg" style="width:80%; height: 75%; border-radius: 12px; margin-top: 30px;">
           <h1>Manuka Sasen</h1>
           <p>Front-End Junior Web<br>Developer 👋</p>
+          <p style="font-size: 15px; font-weight: bold;">sasendev47@gmail.com</p>
           <div style="padding-bottom: 10px; font-size: 22px; color: #fff;">
             <a href="https://github.com/Manuka-Athukorala"><i class="fa fa-github"></i></a>
             <a href="https://replit.com/@sasen47code/BizBuds?v=1"><i class="fa-solid fa-code"></i></a>
-            <a href="#"><i class="fa fa-linkedin"></i></a>
+            <!--<a href="#"><i class="fa fa-linkedin"></i></a>-->
             <a href="#"><i class="fa fa-youtube"></i></a>
-            <a href="#"><i class="fa-regular fa-at"></i></a>
             <div class="tooltip">
               <a href="#"><i class="fa-brands fa-whatsapp"><p class="tooltiptext" style="font-size: 17px;">0766802009</p></i></a>
             </div>
