--- a/index.html
+++ b/index.html
@@ -871,7 +871,7 @@ font-weight: 400;
           <div class="pcard">
             <img src="ll.png" class="cc">
             <p class="PP">Live code editor inspiration by online compiler i use when i started coding. </p>
-            <a href="live code editor.html">
+            <a href="Live code editor.html">
               <button class="btnc">&nbsp;<b>Check It Out</b>&nbsp;</button>
             </a>
           </div>
